--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,6 +1,10 @@
-<h1>Editing Project</h1>
+<div class="card bg-dark">
+    <%= link_to 'Back', @project, class: 'btn btn-dark mb-2' %>
+    <div class="card-body">
+        <h2 class="card-title mb-4">
+            <span>Edit Project</span>  
+        </h2>
+        <%= render 'form', project: @project %>
+    </div>
+</div>
 
-<%= render 'form', project: @project %>
-
-<%= link_to 'Show', @project %> |
-<%= link_to 'Back', projects_path %>
