--- a/app/javascript/stylesheets/_base.scss
+++ b/app/javascript/stylesheets/_base.scss
@@ -1,3 +1,49 @@
 body {
-    background-color: #eeeeee;
+    background-color: rgb(77, 72, 72);
+    color: #ddd;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 200px;
 }
+
+.project-card {
+    transition: background-color 0.5s ease;
+    &:hover {
+        background-color: #f7f7f7;
+    }
+}
+
+.show {
+    margin-bottom: 30px;
+    margin-top: -80px;
+    border-radius: 400px;
+}
+
+.edit {
+    margin-bottom: 30px;
+    margin-top: -80px;
+}
+
+.new {
+    margin-bottom: 30px;
+    margin-top: -80px;
+}
+
+.container {
+   border-radius: 500px;
+}
+
+.index {
+    height: -10vh;
+}
+
+.btn-success {
+    margin-bottom: -15px;
+    margin-top: 5px;
+}
+
+.card {
+    color: #ddd;
+
+}
+
+ 
