--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,31 +1,33 @@
-<p id="notice"><%= notice %></p>
+<div class="index">
+  <div class="card bg-dark rounded-square">
+    <div class="card-body">
+      <h2 class="card-title d-flex justify-content-between mb-4">
+        <span>Projects</span>
+        <%= link_to 'New Project', new_project_path, class: 'btn btn-primary rounded-pill' %>
+      </h2>    
 
-<h1>Projects</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @projects.each do |project| %>
-      <tr>
-        <td><%= project.name %></td>
-        <td><%= project.description %></td>
-        <td><%= project.user_id %></td>
-        <td><%= link_to 'Show', project %></td>
-        <td><%= link_to 'Edit', edit_project_path(project) %></td>
-        <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Project', new_project_path %>
+      <% @projects.each do |project| %>
+        <%= link_to project, class: 'text-decoration-none' do %>
+          <div class="card bg-dark project-card mb-3">
+            <div class="card-body">
+              <div class="mb-3">
+                <span class="badge bg-<%= project.badge_color %>">
+                <%= project.status %>
+                </span>
+                <span class="text-secondary">
+                  <small>
+                    <%= project.percent_complete %>% complete
+                    (<%= project.total_complete %>/<%= project.total_tasks %> tasks)
+                  </small> 
+                </span>    
+              </div>
+              <h4 class="card-title"><%= project.name %></h4>
+              <p class="text-secondary"><%= project.description %></p>
+            </div>
+          </div>
+        <% end %> 
+      <% end %>
+    </div>
+  </div>
+</div>
