--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,5 +1,15 @@
-<h1>New Project</h1>
+<div class="new">
+    <div class="card bg-dark">
+        <%= link_to 'Back', projects_path, class: 'btn btn-dark mb-3' %>
+        <div class="card-body">
+            <h2 class="card-title mb-4">
+                <span>New Project</span>    
+            </h2>
+            <%= render 'form', project: @project %>
+        </div>
+    </div>
+</div>  
 
-<%= render 'form', project: @project %>
 
-<%= link_to 'Back', projects_path %>
+
+
