--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,59 +1,62 @@
-<p id="notice"><%= notice %></p>
+<div class="show">
+  <div class="card bg-dark">
+    <%= link_to 'Back', projects_path, class: 'btn btn-dark mb-3' %>
+    <div class="card-body">
+      <h2 class="card-title d-flex justify-content-between mb-4">
+        <span><%= @project.name %></span>
+        <div>
+          <%= link_to 'Edit', edit_project_path(@project), class: 'btn btn-light rounded-pill' %>
+          <%= link_to 'Destroy', @project, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-secondary rounded-pill' %>
+        </div>
+      </h2>
 
-<p>
-  <strong>Name:</strong>
-  <%= @project.name %>
-</p>
+      <div class="mb-4">
+        <h6>New task</h6>
+        <%= form_with(model: [@task.project, @task], html: { class: 'form-inline' }) do |f| %>
+          <% if @task.errors.any? %>
+            <div id="error_explanation">
+              <h2><%= pluralize(@task.errors.count, "error") %> prohibited this task from being saved:</h2>
 
-<p>
-  <strong>Description:</strong>
-  <%= @project.description %>
-</p>
+              <ul>
+              <% @task.errors.full_messages.each do |msg| %>
+                <li><%= msg %></li>
+              <% end %>
+              </ul>
+            </div>
+          <% end %>
 
-<p>
-  <strong>User:</strong>
-  <%= @project.user_id %>
-</p>
+            <%= f.hidden_field :status, value: 'not-started' %>
+            <div class="input-group">
+              <%= f.text_field :name, class: 'form-control rounded-pill', placeholder: 'Enter Task...' %>
+            </div>
+            <div class="input-group">
+              <%= f.submit class: 'btn btn-success rounded-pill' %>
+            </div>
+        <% end %>
+      </div>  
 
-<%= link_to 'Edit', edit_project_path(@project) %> |
-<%= link_to 'Back', projects_path %>
+      
+        <h4>Task</h4>
+        <% @project.tasks.each do |task| %>
+          <% if task.persisted? %>
+          <div class="card bg-dark mb-3">
+            <div class="card-body">
+              <div class="d-flex justify-content-between">
+                <span class="badge bg-<%= task.badge_color %> mb-3"><%= task.status %></span>
+                <div>  
+                  <%= link_to 'Edit', edit_project_task_path(task.project, task), class: 'btn btn-sm btn-light rounded-pill' %>
+                  <%= link_to 'Destroy', [task.project, task], method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-secondary rounded-pill' %>
+                </div>
+              </div>
 
-<hr>
-
-<h1>New task</h1>
-
-<%= render 'tasks/form' %>
-
-<hr>
-
-<h1>Listing tasks</h1>
-
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Description</th>
-    <th>Status</th>
-    <th>Project</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @project.tasks.each do |task| %>
-  <% if task.persisted? %>
-      <tr>
-        <td><%= task.name %></td>
-        <td><%= task.description %></td>
-        <td><%= task.status %></td>
-        <td><%= task.project %></td>
-        <td><%= link_to 'Show', [task.project, task] %></td>
-        <td><%= link_to 'Edit', edit_project_task_path(task.project, task) %></td>
-        <td><%= link_to 'Destroy', [task.project, task], method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-  <% end %>
-<% end %>
-</table>
-
-<br />
-
-<%= link_to 'New Task', new_project_task_path(@project.id) %>
+              <h5 class="card-title mb-2">
+                <span><%= task.name %></span>
+              </h5>
+              <p><%= task.description %></p>  
+            </div>
+          </div>
+          <% end %>
+        <% end %>
+      </div>
+  </div>
+</div>
