--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -11,20 +11,22 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :name %><br />
-    <%= f.text_field :name %>
+    <%= f.text_field :name, class: 'form-control rounded-pill' %>
   </div>
-  <div class="field">
+  <br>
+  <div class="form-group">
     <%= f.label :description %><br />
-    <%= f.text_area :description %>
+    <%= f.text_area :description, class: 'form-control rounded-pill' %>
   </div>
+  <br>
   <div class="field">
     <%= f.label :status %><br />
-    <%= f.select :status, Task::STATUS_OPTIONS %>
+    <%= f.select :status, Task::STATUS_OPTIONS, {},class: 'form-control rounded-pill' %>
   </div>
-  
+  <br>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: 'btn btn-primary rounded-pill'%>
   </div>
 <% end %>
