--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -13,16 +13,16 @@
 
   <div class="form-group">
     <%= form.label :name %>
-    <%= form.text_field :name, class: 'form-control rounded-pill' %>
+    <%= form.text_field :name, class: 'form-control rounded-square' %>
   </div>
   <br>
   <div class="form-group">
     <%= form.label :description %>
-    <%= form.text_area :description, class: 'form-control rounded-pill' %>
+    <%= form.text_area :description, class: 'form-control rounded-square' %>
   </div>
 
   <br>
   <div class="actions">
-    <%= form.submit class: 'btn btn-primary rounded-pill' %>
+    <%= form.submit class: 'btn btn-primary rounded-square' %>
   </div>
 <% end %>
