--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -3,7 +3,7 @@
     <div class="card-body">
       <h2 class="card-title d-flex justify-content-between mb-4">
         <span>Projects</span>
-        <%= link_to 'New Project', new_project_path, class: 'btn btn-primary rounded-pill' %>
+        <%= link_to 'New Project', new_project_path, class: 'btn btn-info rounded-square' %>
       </h2>    
 
 
