--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,5 +1,19 @@
-<nav class="navbar sticky-top navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#"><i class="bi bi-journals"></i>Project-M</a>
+<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark" aria-label="Eighth navbar example">
+  <div class="container">
+    <a class="navbar-brand" href="#"><i class="bi bi-journals"></i>Project-M</a>
+    <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="navbar-collapse collapse" id="navbarsExample07" style="">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item home">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item link">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+      </ul>
     </div>
+  </div>
 </nav>
