--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -5,8 +5,8 @@
       <h2 class="card-title d-flex justify-content-between mb-4">
         <span><%= @project.name %></span>
         <div>
-          <%= link_to 'Edit', edit_project_path(@project), class: 'btn btn-light rounded-pill' %>
-          <%= link_to 'Destroy', @project, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-secondary rounded-pill' %>
+          <%= link_to 'Edit', edit_project_path(@project), class: 'btn btn-light rounded-square' %>
+          <%= link_to 'Destroy', @project, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-secondary rounded-square' %>
         </div>
       </h2>
 
@@ -27,36 +27,44 @@
 
             <%= f.hidden_field :status, value: 'not-started' %>
             <div class="input-group">
-              <%= f.text_field :name, class: 'form-control rounded-pill', placeholder: 'Enter Task...' %>
+              <%= f.text_field :name, class: 'form-control rounded-square', placeholder: 'Enter Task...' %>
             </div>
             <div class="input-group">
-              <%= f.submit class: 'btn btn-success rounded-pill' %>
+              <%= f.submit class: 'btn btn-success rounded-square' %>
             </div>
         <% end %>
       </div>  
+      <br>
+        <h4>Tasks</h4>
+        <ul id="tasks-list">
+          <% @project.tasks.each do |task| %>
+            <% if task.persisted? %>
+            <li>
+              <div class="card bg-dark mb-3">
+                <div class="card-body">
+                  <div class="d-flex justify-content-between">
+                    <div class="status">
+                      <i class="bi bi-grid grip text-secondary"></i>
+                      <span class="badge bg-<%= task.badge_color %> mb-3">
+                        <%= task.status %>
+                      </span>
+                    </div>
+                    <div>  
+                      <%= link_to 'Edit', edit_project_task_path(task.project, task), class: 'btn btn-sm btn-light rounded-square' %>
+                      <%= link_to 'Destroy', [task.project, task], method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-secondary rounded-square' %>
+                    </div>
+                  </div>
 
-      
-        <h4>Task</h4>
-        <% @project.tasks.each do |task| %>
-          <% if task.persisted? %>
-          <div class="card bg-dark mb-3">
-            <div class="card-body">
-              <div class="d-flex justify-content-between">
-                <span class="badge bg-<%= task.badge_color %> mb-3"><%= task.status %></span>
-                <div>  
-                  <%= link_to 'Edit', edit_project_task_path(task.project, task), class: 'btn btn-sm btn-light rounded-pill' %>
-                  <%= link_to 'Destroy', [task.project, task], method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-secondary rounded-pill' %>
+                  <h5 class="card-title mb-2">
+                    <span><%= task.name %></span>
+                  </h5>
+                  <p><%= task.description %></p>  
                 </div>
               </div>
-
-              <h5 class="card-title mb-2">
-                <span><%= task.name %></span>
-              </h5>
-              <p><%= task.description %></p>  
-            </div>
-          </div>
+            </li>
+            <% end %>
           <% end %>
-        <% end %>
+        </ul> 
       </div>
   </div>
 </div>
