--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -13,20 +13,20 @@
 
   <div class="form-group">
     <%= f.label :name %><br />
-    <%= f.text_field :name, class: 'form-control rounded-pill' %>
+    <%= f.text_field :name, class: 'form-control rounded-square' %>
   </div>
   <br>
   <div class="form-group">
     <%= f.label :description %><br />
-    <%= f.text_area :description, class: 'form-control rounded-pill' %>
+    <%= f.text_area :description, class: 'form-control rounded-square' %>
   </div>
   <br>
   <div class="field">
     <%= f.label :status %><br />
-    <%= f.select :status, Task::STATUS_OPTIONS, {},class: 'form-control rounded-pill' %>
+    <%= f.select :status, Task::STATUS_OPTIONS, {},class: 'form-control rounded-square' %>
   </div>
   <br>
   <div class="actions">
-    <%= f.submit class: 'btn btn-primary rounded-pill'%>
+    <%= f.submit class: 'btn btn-primary rounded-square'%>
   </div>
 <% end %>
